Fix update swagger
